<resources>
    <string name="app_name">DemoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">SignIn</string>
    <string name="menu_gallery">Profile Information</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_firebase_sign_up">Firebase SignUp</string>

    <string name="text_full_name">Full Name</string>
    <string name="text_email_id">Email Id</string>
    <string name="text_password">Password</string>
    <string name="text_register">SignUp</string>
    <string name="text_firebase_sign_in">Firebase SignIn</string>
    <string name="text_signIn">SignIn</string>
    <string name="text_forget_password">Forgot Password ?</string>
    <string name="text_user_name">User Name</string>

    <string name="text_lat">Latitude</string>
    <string name="text_long">Longitude</string>
    <string name="text_accuracy">Accuracy</string>
    <string name="text_speed">Speed</string>
    <string name="text_altitude">Altitude</string>


    <string name="text_follow_use">Follow us on :</string>

<!--
    <string name="text_user_name">User Name</string>&ndash;&gt;
-->




</resources>